css/style.css
body{
    font-family:  Georgia, serif;
    line-height: 1.6;
    background-color:#ecd9c6;

    margin-left: 280px;
    margin-right: 20px;
}

h1{
    color: #003300;
}

h2{
    color: #004d00;
    margin-top: 40px
}

h3{
    color: #004d00;
}

img {
    float: left;
    margin-left: auto;
    margin-right: 20px;

    margin-top: 10px;
    margin-bottom: 5px;

    max-width: 300px;
    height: auto;
}

h2{
   margin-top: 20px;
}

a{
    color: blue;
}



li{
    margin-bottom: 20px;
}

nav {
    margin-bottom: 20px;
    font-weight: bold;
}

nav a {
    text-decoration: none;
    margin-right: 10px;
}

nav a:hover {
    color: hsl(197, 100%, 75%);
}

section {
    margin-bottom: 20px;
    padding: 20px;
    border: 3px solid #2c3e50;
    background-color: #f2e6d9;
    border: 3px solid #2c3e50;
      
}


.about-flex {
    display: flex;
    gap: 32px;
    margin-top: 20px;
    margin-bottom: 32px;
}

nav {
    position: fixed;
    left: 0;
    top: 0;
    display: flex;

    flex-direction: column;
    align-items: flex-start;

    justify-content: flex-start;
    align-items: flex-start; 
    width: 200px;
    height: 100vh;
  
    padding: 40px;
    padding-top: 20px;
    margin-bottom: 5px;
    font-weight: bold;
    gap: 24px;
    
    background-color: #ecd9c6;
    z-index: 1000;
  }

  .card-container {
    display: flex;
    gap: 24px;
    flex-wrap: wrap;
  }

  .card{
    flex: 1 1 220px;
    padding: 20px;
    border: 5px solid #2c3e50;
  }
  .grid-layout{
    display: block;
    grid-template-columns: 1fr;
    gap: 20px;
  }

  header, main{
    padding: 16px;
    border: 0px solid #004d00
  }

  footer {
    padding: 16px;
    border: 1px solid #004d00;
    clear: both;
    width: 100%;
}

  nav {
    position: fixed;
    height: 100vh;
    border-right: 2px solid #004d00; 
    border-bottom: none; 
    border-top: none;
    border-left: none;
}

  header {
    grid-column: 1/3;
  }

  nav{
    grid-column: 1/2
  }

  main{ 
    grid-column: 2/3
  }

  footer{
    grid-column: 1/3;
  }

  .bottom-content{
    clear: left;
  }

@media (max-width: 768px) {
    nav {
        position: static;
        width: 100%;
        height: auto;
        background-color: transparent;    
    }

    body {
        margin-left: 20px;
        margin-right: 20px;
    }

    .grid-layout{
        display: grid;
        grid-template-columns: 1fr 3fr;
        gap: 20px;
    }

    nav{
        grid-column: 1;
    }

    main{
        grid-column: 1;
    }
}



    

